objects/Deal_Support_Email_Ids__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APAC__c</fullName>
        <label>APAC</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRAZIL__c</fullName>
        <label>BRAZIL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA__c</fullName>
        <label>EMEA</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATAM__c</fullName>
        <label>LATAM</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA__c</fullName>
        <label>NA</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US__c</fullName>
        <label>US</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Deal Support Email Ids</label>
    <listViews>
        <fullName>All_Business_Consulting_Categories</fullName>
        <columns>NAME</columns>
        <columns>APAC__c</columns>
        <columns>EMEA__c</columns>
        <columns>LATAM__c</columns>
        <columns>NA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>@@</value>
        </filters>
        <label>All Business Consulting Categories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Customer_Care_Categories</fullName>
        <columns>NAME</columns>
        <columns>APAC__c</columns>
        <columns>EMEA__c</columns>
        <columns>LATAM__c</columns>
        <columns>NA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>%%</value>
        </filters>
        <label>All Customer Care Categories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Finance_Categories</fullName>
        <columns>NAME</columns>
        <columns>APAC__c</columns>
        <columns>EMEA__c</columns>
        <columns>LATAM__c</columns>
        <columns>NA__c</columns>
        <columns>BRAZIL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>##</value>
        </filters>
        <label>All Finance Categories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Pricing_Categories</fullName>
        <columns>NAME</columns>
        <columns>APAC__c</columns>
        <columns>EMEA__c</columns>
        <columns>LATAM__c</columns>
        <columns>NA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>$$</value>
        </filters>
        <label>All Pricing Categories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>APAC__c</columns>
        <columns>EMEA__c</columns>
        <columns>LATAM__c</columns>
        <columns>NA__c</columns>
        <columns>BRAZIL__c</columns>
        <columns>US__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Support_Areas</fullName>
        <columns>NAME</columns>
        <columns>APAC__c</columns>
        <columns>EMEA__c</columns>
        <columns>LATAM__c</columns>
        <columns>NA__c</columns>
        <columns>US__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>##,$$,@@,%%</value>
        </filters>
        <label>All Support Areas</label>
        <language>en_US</language>
    </listViews>
</CustomObject>